Changed styling of the buttons to fix the spacing between them.

--- a/src/App.css
+++ b/src/App.css
@@ -15,11 +15,8 @@
         @apply rounded-2xl
     }
 
-    .server-button ~ *:not(:last-child) {
-        @apply my-2
-    }
-
-    .server-button:last-child {
+    .server-button ~ .server-button {
         @apply mt-2
     }
+
 }
